--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,369 @@
 :root {
-    --primario: #6834a6;
-    --blanco: #FFF;
-    --negro: #000000;
-    --fuentePrincipal: 'Poppins', sans-serif;
+  --primario: #6834a6;
+  --blanco: #fff;
+  --negro: #000000;
+  --fuentePrincipal: "Poppins", sans-serif;
 }
 html {
-    font-size: 62.5%;
-    box-sizing: border-box;
+  font-size: 62.5%;
+  box-sizing: border-box;
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 body {
-    font-family: var(--fuentePrincipal);
-    font-size: 1.6rem;
-    line-height: 1.8;
+  font-family: var(--fuentePrincipal);
+  font-size: 1.6rem;
+  line-height: 1.8;
+  overflow-x: hidden;
 }
-h1, h2, h3 {
-    font-weight: 900;
-    margin: 2rem 0;
+h1,
+h2,
+h3 {
+  font-weight: 900;
+  margin: 2rem 0;
 }
 h1 {
-    font-size: 5rem;
+  font-size: 5rem;
 }
 h2 {
-    font-size: 4.6rem;
+  font-size: 4.6rem;
 }
 h3 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 img {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
-.contenedor {
-    max-width: 120rem;
+/*Seleciona cualquier classe que contenga __contenedor y aplica las siguientes reglas*/
+[class$="__contenedor"] {
+  max-width: 120rem;
+  margin: 0 auto;
+  width: 90%;
+}
+
+/*Header*/
+.header {
+  background-image: url(../img/header_bg.svg);
+  background-repeat: no-repeat;
+  background-position: top right;
+  background-size: 15rem;
+  padding: 5rem 0;
+}
+
+@media (min-width: 768px) {
+  .header {
+    background-size: 50rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .header {
+    background-size: 60rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .header {
+    background-size: 120rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .header__barra {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.header__logo {
+  width: 15rem;
+  margin: 0 auto 3rem auto;
+}
+@media (min-width: 768px) {
+  .header__logo {
+    margin: 0;
+  }
+  .header__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+    align-items: center;
+  }
+}
+.header__heading {
+  text-align: center;
+  font-size: 3rem;
+}
+
+@media (min-width: 768px) {
+  .header__imagen {
+    max-width: 30rem;
     margin: 0 auto;
-    width: 90%;
+  }
+}
+
+@media (min-width: 768px) {
+  .header__heading {
+    text-align: left;
+    font-size: 5rem;
+    line-height: 1.1;
+  }
+}
+.header__boton {
+  background-color: var(--primario);
+  display: block;
+  padding: 1rem;
+  text-align: center;
+  color: var(--blanco);
+  margin-bottom: 4rem;
+}
+
+@media (min-width: 768px) {
+  .header__boton {
+    padding: 1rem 3rem;
+    display: inline-block;
+  }
+}
+.navegacion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .navegacion {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 2rem;
+  }
+}
+.navegacion__link {
+  color: var(--primario);
+  font-weight: 700;
+}
+
+@media (min-width: 768px) {
+  .navegacion__link {
+    color: var(--blanco);
+  }
+}
+/*Que es*/
+.nucleus {
+  margin-top: 3rem;
+}
+.nucleus__heading {
+  text-align: center;
+  margin-bottom: 5rem;
+}
+.nucleus__grid {
+  display: flex;
+  flex-direction: column-reverse;
+  padding-bottom: 5rem;
+}
+
+@media (min-width: 768px) {
+  .nucleus__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5rem;
+  }
+}
+/*Listado*/
+
+.listado__elemento {
+  box-shadow: 0px 0px 15px 3px rgb(0 0 0 /0.15);
+  padding: 2rem;
+  margin-bottom: 5rem;
+  transition: transform;
+  transition-duration: 0.4s;
+  transition-delay: 0.1s;
+  background-color: var(--blanco);
+}
+
+@media (min-width: 768px) {
+  .listado__elemento--2col {
+    display: flex;
+
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+  }
+}
+.listado__elemento:hover {
+  transform: scale(1.1);
+}
+.listado__heading {
+  font-size: 3rem;
+  color: var(--primario);
+  line-height: 1.2;
+  margin: 0;
+}
+.listado__numero {
+  font-size: 6rem;
+  margin: 0;
+  font-weight: 900;
+  text-align: center;
+  color: var(--primario);
+}
+
+@media (min-width: 768px) {
+  .listado__numero {
+    flex-basis: 20rem;
+    text-align: right;
+    font-size: 4rem;
+  }
+}
+.listado__texto {
+  margin: 0;
+  font-size: 2rem;
+}
+/*Seguridad*/
+.seguridad {
+  background-color: var(--primario);
+  padding: 20rem 0;
+  position: relative;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+.seguridad::before,
+.seguridad::after {
+  background-color: var(--blanco);
+  content: " ";
+  height: 15rem;
+  width: 130%;
+  position: absolute;
+}
+.seguridad::before {
+  top: -10rem;
+  left: 0;
+  transform: rotate(3deg);
+}
+.seguridad::after {
+  transform: rotate(-3deg);
+  bottom: -10rem;
+  left: -1rem;
+}
+.seguridad__heading {
+  text-align: center;
+  margin-bottom: 5rem;
+  color: var(--blanco);
+}
+
+.seguridad__grid {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+@media (min-width: 768px) {
+  .seguridad__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5rem;
+    align-items: center;
+  }
+}
+.comisiones {
+  padding-top: 5rem;
+}
+@media (min-width: 768px) {
+  .comisiones__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5rem;
+    align-items: flex-end;
+  }
+}
+@media (min-width: 998px) {
+  .comisiones__grid {
+    align-items: center;
+  }
+}
+.comisiones__texto {
+  text-align: center;
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+/*Testimoniales*/
+.testimoniales {
+  padding-top: 5rem;
+}
+.testimoniales__heading {
+  text-align: center;
+  margin: 0;
+}
+.testimoniales__grid {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .testimoniales__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.2;
+  background-color: var(--blanco);
+  box-shadow: 0px 0px 15px 3px rgb(0 0 0 /0.15);
+  padding: 2rem;
+  position: relative;
+}
+
+.testimonial__texto {
+  font-size: 2.2rem;
+  padding-left: 3rem;
+  margin: 0;
+  text-align: left;
+}
+.testimonial__texto::before {
+  content: "";
+  background-image: url(../img/comilla.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 3rem;
+  height: 3rem;
+  background-size: 3rem;
+  position: absolute;
+  top: 1.5rem;
+  left: 1.5rem;
+}
+.testimonial__author {
+  text-align: right;
+  color: var(--primario);
+  font-weight: 500;
+}
+/*footer*/
+.footer {
+  background-color: #5a30a0;
+  padding-top: 5rem 0;
+}
+@media (min-width: 768px) {
+  .footer__grid {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer__logo {
+    margin: 0;
+  }
+}
+.footer__logo {
+  width: 20rem;
+  margin: 0 auto 4rem auto;
 }
