--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,9 @@ img {
     color: var(--blanco);
   }
 }
+.navegacion__link--blanco {
+  color: var(--blanco);
+}
 /*Que es*/
 .nucleus {
   margin-top: 3rem;
